--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "constantinople": ">=3.1.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/express-flash": "0.0.1",
     "@types/express-myconnection": "^1.0.33",
